Added new flags to list

--- a/prideflags.html
+++ b/prideflags.html
@@ -329,6 +329,32 @@
                 </tr>
                 <tr>
                     <td>
+                        <img src="https://static.wikia.nocookie.net/lgbtqia-sandbox/images/1/17/AlternateBigenderFlag.png"
+                            alt="The bigender pride flag; from top to bottom: pink, yellow, white, purple, blue." />
+                        Bigender
+                        <br />
+                        (Flag from <a href="https://lgbtqia.fandom.com/wiki/File:AlternateBigenderFlag.png" target="_blank"
+                            rel="noopener noreferrer">Wikipedia</a>)
+                    </td>
+                    <td>5 stripes
+                        <ul>
+                            <li>pink</li>
+                            <li>yellow</li>
+                            <li>white</li>
+                            <li>purple</li>
+                            <li>blue</li>
+                        </ul>
+                    </td>
+                    <td>
+                        <br />
+                    </td>
+                    <td>
+                        <a href="https://pyrrhicsilvacrafts.etsy.com/listing/1885156512/lgbtq-pride-earrings-aroace-asexual"
+                            target="_blank" rel="noopener noreferrer">4mm bicone bead star earrings</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
                         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3d/Maverique_flag.svg/330px-Maverique_flag.svg.png"
                             alt="The Maverique pride flag; from top to bottom: yellow, white, orange." />
                         Maverique
@@ -816,6 +842,34 @@
                             <li>white</li>
                             <li>pink</li>
                             <li>dark-pink</li>
+                        </ul>
+                    </td>
+                    <td>
+                        <br />
+                    </td>
+                    <td>
+                        <a href="https://pyrrhicsilvacrafts.etsy.com/listing/1885156512/lgbtq-pride-earrings-aroace-asexual"
+                            target="_blank" rel="noopener noreferrer">4mm bicone bead star earrings</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <img src="https://static.wikia.nocookie.net/lgbtqia-sandbox/images/e/e0/Queerplatonic.svg"
+                            alt="The queer-platonic relationship pride flag; from top to bottom: yellow, pink, white, gray, black." />
+                        Queer-platonic relationships
+                        <br />
+                        (more than a bestie, not your spouse)
+                        <br />
+                        (Flag from <a href="https://lgbtqia.fandom.com/wiki/File:Queerplatonic.svg" target="_blank"
+                            rel="noopener noreferrer">LGBTQIA+ Wiki</a>)
+                    </td>
+                    <td>5 stripes
+                        <ul>
+                            <li>yellow</li>
+                            <li>pink</li>
+                            <li>white</li>
+                            <li>gray</li>
+                            <li>black</li>
                         </ul>
                     </td>
                     <td>
