Androgyne flag page moved; fixed link to point to correct page(s)

--- a/prideflags.html
+++ b/prideflags.html
@@ -379,13 +379,13 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="https://static.wikia.nocookie.net/lgbtqia-sandbox/images/f/f0/Androgyne.svg"
+                        <img src="https://static.wikia.nocookie.net/lgbtqia-sandbox/images/9/9d/Androgyne_Flag.svg"
                             alt="The androgyne pride flag; from left to right: dark pink, purple, light blue." />
                         Androgyne
                         <br />
                         (gender identity)
                         <br />
-                        (Flag from <a href="https://lgbtqia.fandom.com/wiki/File:Androgyne.svg" target="_blank"
+                        (Flag from <a href="https://lgbtqia.fandom.com/wiki/File:Androgyne_Flag.svg" target="_blank"
                             rel="noopener noreferrer">LGBTQIA+ Wiki</a>)
                     </td>
                     <td>3 stripes
