Added new flags to list

--- a/prideflags.html
+++ b/prideflags.html
@@ -221,7 +221,7 @@
                     </td>
                     <td>
                         <ul>
-                            <li><a href="https://pyrrhicsilvacrafts.etsy.com/listing/1885155086/lgbtq-pride-earrings-transgender"
+                            <li><a href="https://pyrrhicsilvacrafts.etsy.com/listing/4307004457/rainbow-gay-lesbian-bisexual-transgender"
                                     target="_blank" rel="noopener noreferrer">4mm bicone bead star earrings</a></li>
                             <li><a href="https://pyrrhicsilvacrafts.etsy.com/listing/4298011351/transgender-pansexual-bisexual-earrings"
                                     target="_blank" rel="noopener noreferrer">Plastic bead earrings</a></li>
@@ -248,7 +248,7 @@
                             alt="4mm bicone earrings of the intersex pride flag." />
                         <br />
                     </td>
-                    <td><a href="https://pyrrhicsilvacrafts.etsy.com/listing/1885155086/lgbtq-pride-earrings-transgender/"
+                    <td><a href="https://pyrrhicsilvacrafts.etsy.com/listing/4307004457/rainbow-gay-lesbian-bisexual-transgender"
                             target="_blank" rel="noopener noreferrer">4mm bicone bead star earrings</a>
                     </td>
                 </tr>
@@ -880,6 +880,58 @@
                             target="_blank" rel="noopener noreferrer">4mm bicone bead star earrings</a>
                     </td>
                 </tr>
+                <tr>
+                    <td>
+                        <img src="https://static.wikia.nocookie.net/lgbtqia-sandbox/images/e/e0/Queerplatonic.svg"
+                            alt="The gynesexual pride flag; from top to bottom: pink, brown, light-green." />
+                        Gynesexual
+                        <br />
+                        (woman/femme attraction)
+                        <br />
+                        (Flag from <a href="https://lgbtqia.fandom.com/wiki/File:Queerplatonic.svg" target="_blank"
+                            rel="noopener noreferrer">LGBTQIA+ Wiki</a>)
+                    </td>
+                    <td>5 stripes
+                        <ul>
+                            <li>pink</li>
+                            <li>brown</li>
+                            <li>light-green</li>
+                        </ul>
+                    </td>
+                    <td>
+                        <br />
+                    </td>
+                    <td>
+                        <a href="https://pyrrhicsilvacrafts.etsy.com/listing/1885156512/lgbtq-pride-earrings-aroace-asexual"
+                            target="_blank" rel="noopener noreferrer">4mm bicone bead star earrings</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <img src="https://static.wikia.nocookie.net/lgbtqia-sandbox/images/e/e3/AndrosexualFlag.png"
+                            alt="The androsexual pride flag; from top to bottom: light-blue, brown, purple." />
+                        Androsexual
+                        <br />
+                        (man/masc attraction)
+                        <br />
+                        (Flag from <a href="https://lgbtqia.fandom.com/wiki/File:AndrosexualFlag.png" target="_blank"
+                            rel="noopener noreferrer">LGBTQIA+ Wiki</a>)
+                    </td>
+                    <td>5 stripes
+                        <ul>
+                            <li>light-blue</li>
+                            <li>brown</li>
+                            <li>purple</li>
+                        </ul>
+                    </td>
+                    <td>
+                        <br />
+                    </td>
+                    <td>
+                        <a href="https://pyrrhicsilvacrafts.etsy.com/listing/1885156512/lgbtq-pride-earrings-aroace-asexual"
+                            target="_blank" rel="noopener noreferrer">4mm bicone bead star earrings</a>
+                    </td>
+                </tr>
             </table>
         </div>
     </div>
@@ -887,7 +939,7 @@
         <nav>
             <ul>
                 <li>&nbsp;</li>
-                <li>Last updated 02 June 2025.</li>
+                <li>Last updated 24 June 2025.</li>
             </ul>
         </nav>
     </footer>
