Added variant descriptions for mirrored flag bracelets

--- a/prideflags.html
+++ b/prideflags.html
@@ -265,10 +265,17 @@
                             target="_blank" rel="noopener noreferrer">Wikipedia</a>)
                     </td>
                     <td>
-                        5 stripes
+                        5-stripe variant (earrings, necklace)
                         <ul>
                             <li>light-blue</li>
                             <li>pink</li>
+                            <li>white</li>
+                            <li>pink</li>
+                            <li>light-blue</li>
+                        </ul>
+                        <br />
+                        3-stripe variant (bracelet)
+                        <ul>
                             <li>white</li>
                             <li>pink</li>
                             <li>light-blue</li>
@@ -559,11 +566,19 @@
                         (Flag from <a href="https://lgbtqia.fandom.com/wiki/File:Agender_Flag.svg" target="_blank"
                             rel="noopener noreferrer">LGBTQIA+ Wiki</a>)
                     </td>
-                    <td>7 stripes
+                    <td>7-stripe variant (earrings, necklace)
                         <ul>
                             <li>black</li>
                             <li>gray</li>
                             <li>white</li>
+                            <li>light-green</li>
+                            <li>white</li>
+                            <li>gray</li>
+                            <li>black</li>
+                        </ul>
+                        <br />
+                        4-stripe variant (bracelet)
+                        <ul>
                             <li>light-green</li>
                             <li>white</li>
                             <li>gray</li>
@@ -672,11 +687,21 @@
                         (Flag from <a href="https://lgbtqia.fandom.com/wiki/File:Multigender_Flag.svg" target="_blank"
                             rel="noopener noreferrer">LGBTQIA+ Wiki</a>)
                     </td>
-                    <td>3 stripes
+                    <td>
+                        5-stripe variant (earrings, necklace)
                         <ul>
-                            <li>white</li>
-                            <li>green</li>
-                            <li>black</li>
+                            <li>blue</li>
+                            <li>light-blue</li>
+                            <li>orange</li>
+                            <li>light-blue</li>
+                            <li>blue</li>
+                        </ul>
+                        <br />
+                        3-stripe variant (bracelet)
+                        <ul>
+                            <li>orange</li>
+                            <li>light-blue</li>
+                            <li>blue</li>
                         </ul>
                     </td>
                     <td>
