Added new photos to flags page

--- a/prideflags.html
+++ b/prideflags.html
@@ -55,7 +55,7 @@
                             <li>purple</li>
                         </ul>
                     </td>
-                    <td><img src="img/Rainbow7_4mm_bicone_earrnigs.jpg"
+                    <td><img src="img/4b-rain7-lv.jpg"
                             alt="4mm bicone bead earrings of the seven-striped rainbow flag." />
                         <br />
                     </td>
@@ -95,7 +95,7 @@
                             <li>purple</li>
                         </ul>
                     </td>
-                    <td><img src="img/Rainbow6_4mm_bicone_earrings.JPEG"
+                    <td><img src="img/4b-rain6-lv.JPEG"
                             alt="4mm bicone bead earrings of the seven-striped rainbow flag." />
                         <br />
                     </td>
@@ -150,7 +150,8 @@
                             <li>purple</li>
                         </ul>
                     </td>
-                    <td>
+                    <td><img src="img/4b-prog-neck.jpg"
+                            alt="4mm bicone bead necklace charm of the shortened progress pride flag." />
                         <br />
                     </td>
                     <td>
@@ -191,7 +192,8 @@
                             <li>purple</li>
                         </ul>
                     </td>
-                    <td>
+                    <td><img src="img/4b-rain8-neck.jpg"
+                            alt="4mm bicone bead necklace charm of the original eight-striped rainbow flag." />
                         <br />
                     </td>
                     <td>
@@ -227,7 +229,8 @@
                             <li>purple</li>
                         </ul>
                     </td>
-                    <td>
+                    <td><img src="img/4b-philly-neck.jpg"
+                            alt="4mm bicone bead necklace charm of the Philadelphia rainbow flag." />
                         <br />
                     </td>
                     <td>
@@ -281,8 +284,8 @@
                             <li>light-blue</li>
                         </ul>
                     </td>
-                    <td><img src="img/Trans5_4mm_bicone_earrings.jpg"
-                            alt="4mm bicone earrings of the transgender pride flag." />
+                    <td><img src="img/4b-trans5-lv.jpg"
+                            alt="4mm bicone earrings of the full transgender pride flag." />
                         <br />
                     </td>
                     <td>
@@ -319,7 +322,7 @@
                             <li>yellow</li>
                         </ul>
                     </td>
-                    <td><img src="img/Intersex_4mm_bicone_earrings.JPEG"
+                    <td><img src="img/4b-intsex-lv.JPEG"
                             alt="4mm bicone earrings of the intersex pride flag." />
                         <br />
                     </td>
@@ -354,7 +357,7 @@
                             <li>black</li>
                         </ul>
                     </td>
-                    <td><img src="img/Nonbinary_4mm_bicone_earrings.jpg"
+                    <td><img src="img/4b-enby-lv.jpg"
                             alt="4mm bicone earrings of the nonbinary pride flag." />
                         <br />
                     </td>
@@ -390,7 +393,7 @@
                             <li>light-green</li>
                         </ul>
                     </td>
-                    <td><img src="img/Genderqueer_4mm_bicone_earrings.jpg"
+                    <td><img src="img/4b-gqueer-lv.jpg"
                             alt="4mm bicone earrings of the genderqueer pride flag." />
                         <br />
                     </td>
@@ -428,7 +431,7 @@
                             <li>blue</li>
                         </ul>
                     </td>
-                    <td><img src="img/Genderfluid_4mm_bicone_earrings.JPEG"
+                    <td><img src="img/4b-gfluid-lv.jpg"
                             alt="4mm bicone earrings of the genderfluid pride flag." />
                         <br />
                     </td>
@@ -466,7 +469,8 @@
                             <li>blue</li>
                         </ul>
                     </td>
-                    <td>
+                    <td><img src="img/4B-Bigend-Neck.jpg"
+                            alt="4mm bicone bead necklace charm of the bigender pride flag." />
                         <br />
                     </td>
                     <td>
@@ -501,7 +505,7 @@
                             <li>orange</li>
                         </ul>
                     </td>
-                    <td><img src="img/Maverique_4mm_bicone_earrings.jpg"
+                    <td><img src="img/4b-mav-lv.jpg"
                             alt="4mm bicone earrings of the maverique pride flag." />
                         <br />
                     </td>
@@ -539,7 +543,8 @@
                             <li>light-blue</li>
                         </ul>
                     </td>
-                    <td>
+                    <td><img src="img/4b-angy-neck.jpg"
+                            alt="4mm bicone bead necklace charm of the androgyne pride flag." />
                         <br />
                     </td>
                     <td>
@@ -585,7 +590,8 @@
                             <li>black</li>
                         </ul>
                     </td>
-                    <td>
+                    <td><img src="img/4b-agend-neck.jpg"
+                            alt="4mm bicone bead necklace charm of the agender pride flag." />
                         <br />
                     </td>
                     <td>
@@ -621,7 +627,8 @@
                             <li>green</li>
                         </ul>
                     </td>
-                    <td>
+                    <td><img src="img/4b-gneut-neck.jpg"
+                            alt="4mm bicone bead necklace charm of the gender neutral pride flag." />
                         <br />
                     </td>
                     <td>
@@ -658,7 +665,8 @@
                             <li>black</li>
                         </ul>
                     </td>
-                    <td>
+                    <td><img src="img/4b-trois-neck.jpg"
+                            alt="4mm bicone bead necklace charm of the neutrois pride flag." />
                         <br />
                     </td>
                     <td>
@@ -704,7 +712,8 @@
                             <li>blue</li>
                         </ul>
                     </td>
-                    <td>
+                    <td><img src="img/4b-multig-neck.jpg"
+                            alt="4mm bicone bead necklace charm of the multigender pride flag." />
                         <br />
                     </td>
                     <td>
@@ -742,7 +751,8 @@
                             <li>light-blue</li>
                         </ul>
                     </td>
-                    <td>
+                    <td><img src="img/4b-polyg-neck.jpg"
+                            alt="4mm bicone bead necklace charm of the polygender pride flag." />
                         <br />
                     </td>
                     <td>
@@ -791,7 +801,7 @@
                             <li>blue</li>
                         </ul>
                     </td>
-                    <td><img src="img/Gayman5_4mm_bicone_earrings.jpg"
+                    <td><img src="img/4b-gay5-lv.jpg"
                             alt="4mm bicone earrings of the 5-stripe gay man pride flag." />
                         <br />
                     </td>
@@ -829,7 +839,7 @@
                             <li>dark-pink</li>
                         </ul>
                     </td>
-                    <td><img src="img/Lesbian5_4mm_bicone_earrings.jpg"
+                    <td><img src="img/4b-lesbo5-lv.jpg"
                             alt="4mm bicone earrings of the 5-stripe lesbian pride flag." />
                         <br />
                     </td>
@@ -865,7 +875,7 @@
                             <li>blue</li>
                         </ul>
                     </td>
-                    <td><img src="img/Bisexual_4mm_bicone_earrings.JPEG"
+                    <td><img src="img/4b-bi-lv.jpg"
                             alt="4mm bicone earrings of the bisexual pride flag." />
                         <br />
                     </td>
@@ -903,7 +913,7 @@
                             <li>light-blue</li>
                         </ul>
                     </td>
-                    <td><img src="img/Pansexual_4mm_bicone_earrings.jpg"
+                    <td><img src="img/4b-pan-lv.jpg"
                             alt="4mm bicone earrings of the pansexual pride flag." />
                         <br />
                     </td>
@@ -944,7 +954,7 @@
                             <li>black</li>
                         </ul>
                     </td>
-                    <td><img src="img/Ceterosexual_4mm_bicone_earrings.JPEG"
+                    <td><img src="img/4b-cetero-lv.JPEG"
                             alt="4mm bicone earrings of the ceterosexual pride flag." />
                         <br />
                     </td>
@@ -981,7 +991,7 @@
                             <li>purple</li>
                         </ul>
                     </td>
-                    <td><img src="img/Asexual_4mm_bicone_earrings.JPEG"
+                    <td><img src="img/4b-ace-lv.JPEG"
                             alt="4mm bicone earrings of the asexual pride flag." />
                         <br />
                     </td>
@@ -1019,7 +1029,7 @@
                             <li>black</li>
                         </ul>
                     </td>
-                    <td><img src="img/Aromantic_4mm_bicone_earrings.JPEG"
+                    <td><img src="img/4b-aro-lv.JPEG"
                             alt="4mm bicone earrings of the aromantic pride flag." />
                         <br />
                     </td>
@@ -1059,7 +1069,7 @@
                             <li>blue</li>
                         </ul>
                     </td>
-                    <td><img src="img/AroAce_4mm_bicone_earrings.JPEG"
+                    <td><img src="img/4b-aroace-lv.JPEG"
                             alt="4mm bicone earrings of the aroace pride flag." />
                         <br />
                     </td>
@@ -1098,7 +1108,8 @@
                             <li>light-blue</li>
                         </ul>
                     </td>
-                    <td>
+                    <td><img src="img/4b-omnis-neck.jpg"
+                            alt="4mm bicone bead necklace charm of the omnisexual pride flag." />
                         <br />
                     </td>
                     <td>
@@ -1135,7 +1146,8 @@
                             <li>blue</li>
                         </ul>
                     </td>
-                    <td>
+                    <td><img src="img/4b-polys-neck.jpg"
+                            alt="4mm bicone bead necklace charm of the polysexual pride flag." />
                         <br />
                     </td>
                     <td>
@@ -1175,7 +1187,8 @@
                             <li>dark-pink</li>
                         </ul>
                     </td>
-                    <td>
+                    <td><img src="img/4b-multis-neck.jpg"
+                            alt="4mm bicone bead necklace charm of the multisexual pride flag." />
                         <br />
                     </td>
                     <td>
@@ -1216,7 +1229,8 @@
                             <li>dark-pink</li>
                         </ul>
                     </td>
-                    <td>
+                    <td><img src="img/4b-abro-neck.jpg"
+                            alt="4mm bicone bead necklace charm of the abrosexual pride flag." />
                         <br />
                     </td>
                     <td>
@@ -1255,7 +1269,8 @@
                             <li>black</li>
                         </ul>
                     </td>
-                    <td>
+                    <td><img src="img/4b-qpr-neck.jpg"
+                            alt="4mm bicone bead necklace charm of the queer-platonic replationship pride flag." />
                         <br />
                     </td>
                     <td>
@@ -1292,7 +1307,8 @@
                             <li>light-green</li>
                         </ul>
                     </td>
-                    <td>
+                    <td><img src="img/4b-gyne-neck.jpg"
+                            alt="4mm bicone bead necklace charm of the gynesexual pride flag." />
                         <br />
                     </td>
                     <td>
@@ -1329,7 +1345,8 @@
                             <li>purple</li>
                         </ul>
                     </td>
-                    <td>
+                    <td><img src="img/4b-andro-neck.jpg"
+                            alt="4mm bicone bead necklace charm of the androsexual pride flag." />
                         <br />
                     </td>
                     <td>
