Switched out some of the sample images for some from the 8mm round bead star line

--- a/prideflags.html
+++ b/prideflags.html
@@ -322,7 +322,7 @@
                             <li>yellow</li>
                         </ul>
                     </td>
-                    <td><img src="img/4b-intsex-lv.JPEG"
+                    <td><img src="img/8r-intsex-lv.jpg"
                             alt="4mm bicone earrings of the intersex pride flag." />
                         <br />
                     </td>
@@ -505,7 +505,7 @@
                             <li>orange</li>
                         </ul>
                     </td>
-                    <td><img src="img/4b-mav-lv.jpg"
+                    <td><img src="img/8r-mav-lv.jpg"
                             alt="4mm bicone earrings of the maverique pride flag." />
                         <br />
                     </td>
@@ -801,7 +801,7 @@
                             <li>blue</li>
                         </ul>
                     </td>
-                    <td><img src="img/4b-gay5-lv.jpg"
+                    <td><img src="img/8r-gay5-lv.jpg"
                             alt="4mm bicone earrings of the 5-stripe gay man pride flag." />
                         <br />
                     </td>
@@ -991,7 +991,7 @@
                             <li>purple</li>
                         </ul>
                     </td>
-                    <td><img src="img/4b-ace-lv.JPEG"
+                    <td><img src="img/8r-ace-lv.jpg"
                             alt="4mm bicone earrings of the asexual pride flag." />
                         <br />
                     </td>
@@ -1029,7 +1029,7 @@
                             <li>black</li>
                         </ul>
                     </td>
-                    <td><img src="img/4b-aro-lv.JPEG"
+                    <td><img src="img/8r-aro-lv.jpg"
                             alt="4mm bicone earrings of the aromantic pride flag." />
                         <br />
                     </td>
