Switched out the intersex sample jewelry image

--- a/prideflags.html
+++ b/prideflags.html
@@ -322,7 +322,7 @@
                             <li>yellow</li>
                         </ul>
                     </td>
-                    <td><img src="img/8r-intsex-lv.jpg"
+                    <td><img src="img/4b-intsex-neck.jpg"
                             alt="4mm bicone earrings of the intersex pride flag." />
                         <br />
                     </td>
