Added new page for anime/video game inspired jewelry pieces

--- a/aboutme.html
+++ b/aboutme.html
@@ -27,7 +27,7 @@
         <h2>About Me</h2>
         <img src="img/Spaceman.png"
             alt="A genderless alien drawn by Pyrrhic Silva (Jake) used to represent their online brand." />
-        <p>Jeans Jake is a college student majoring in computer science. They run a small Etsy shop
+        <p>Jeans Jake (they/them) is a college student majoring in computer science. They run a small Etsy shop
             <a href="https://pyrrhicsilvacrafts.etsy.com" target="_blank" rel="noopener noreferrer">Pyrrhic Silva
                 Crafts</a>
             where they sell their handmade jewelry, mostly queer pride pieces and cosplay jewelry. Their interests include programming, gaming, and science fiction.
