--- a/index.html
+++ b/index.html
@@ -29,19 +29,24 @@
             <p>The information and images on this website are provided as-is and may contain errors.</p>
         </div>
         <div class="project">
-            <img src="img/Gay_4mm_bicone_earrings1.JPEG"
-                alt="LGBTQ+ Pride earrings." />
-            <h2>Pride Flags</h2>
-            <p>The inclusion or omission of any flag or flag variant does not imply identification with any community or
-                sub-community.</p>
-            <p><a href="prideflags.html">Pride Swatches</a></p>
+            <img src="img/4b-setA-lv.JPEG" alt="LGBTQ+ Pride earrings." />
+            <h2>Pride Jewelry</h2>
+            <p>A running list of the pride flags that my shop offers jewelry for.</p>
+            <p><a href="pride.html">Pride</a></p>
             <div class="clear"></div>
         </div>
         <div class="project">
-            <img src="" alt="Winter swatch." />
+            <img src="img/Tart-set.jpg" alt="Genshin Impact Childe Tartaglia Earrings." />
+            <h2>Anime and Vidoe Game Jewelry</h2>
+            <p>Various anime and vidoe-game inspired jewelry pieces.</p>
+            <p><a href="fanwork.html">Anime/Video Games</a></p>
+            <div class="clear"></div>
+        </div>
+        <div class="project">
+            <img src="img/Spaceman.png" alt="Winter swatch." />
             <h2>Four Seasons</h2>
             <p>3-color palets for each season.</p>
-            <p></p>
+            <p>Coming soon.</p>
             <p><a href="seasons.html">Seasons Swatches</a></p>
             <div class="clear"></div>
         </div>
@@ -50,7 +55,7 @@
         <nav>
             <ul>
                 <li>&nbsp;</li>
-                <li>Last updated 25 May 2025.</li>
+                <li>Last updated 24 June 2025.</li>
             </ul>
         </nav>
     </footer>
