--- a/seasons.html
+++ b/seasons.html
@@ -25,6 +25,12 @@
     </header>
     <div id="projects">
         <div class="project">
+            <img src="img/4b-setA-lv.JPEG" alt="LGBTQ+ Pride earrings." />
+            <p>3-stone designs inspried by the 4-seasons.</p>
+            <p>Coming soon.</p>
+            <div class="clear"></div>
+        </div>
+        <div class="project">
             <h2>Four Seasons Pendants</h2>
             <p>3-stone pendants .</p>
             <table>
