--- a/fanwork.html
+++ b/fanwork.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Four Seasons</title>
+    <title>Anime/Video Games | Pyrrhic Silva Crafts</title>
     <link rel="stylesheet" href="reset.css" type="text/css">
     <link rel="stylesheet" href="styles.css" type="text/css">
 </head>
 
 <body>
     <header>
-        <h1>Four Seasons | Pyrrhic Silva Crafts</h1>
+        <h1>Anime/Video Games | Pyrrhic Silva Crafts</h1>
         <nav>
             <ul>
                 <li>&nbsp;</li>
