Replaced two deleted images from the LGBTQIA+ Wiki with their updated versions

--- a/pride.html
+++ b/pride.html
@@ -459,12 +459,12 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="https://static.wikia.nocookie.net/lgbtqia-sandbox/images/1/17/AlternateBigenderFlag.png"
+                        <img src="https://static.wikia.nocookie.net/lgbtqia-sandbox/images/0/09/Bigender_Flag_Alt.svg"
                             alt="The bigender pride flag; from top to bottom: pink, yellow, white, purple, blue." />
                         Bigender
                         <br />
-                        (Flag from <a href="https://lgbtqia.fandom.com/wiki/File:AlternateBigenderFlag.png"
-                            target="_blank" rel="noopener noreferrer">Wikipedia</a>)
+                        (Flag from <a href="https://lgbtqia.fandom.com/wiki/File:Bigender_Flag_Alt.svg"
+                            target="_blank" rel="noopener noreferrer">LGBTQIA+ Wiki</a>)
                     </td>
                     <td>5 stripes
                         <ul>
@@ -654,13 +654,13 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="https://static.wikia.nocookie.net/lgbtqia-sandbox/images/5/5a/Neutrois_Flag.png"
+                        <img src="https://static.wikia.nocookie.net/lgbtqia-sandbox/images/0/08/Neutrois_Flag.svg"
                             alt="Neutrois pride flag; from top to bottom: white, green, black." />
                         Neutrois
                         <br />
                         (null gender)
                         <br />
-                        (Flag from <a href="https://lgbtqia.fandom.com/wiki/File:Neutrois_Flag.png" target="_blank"
+                        (Flag from <a href="https://lgbtqia.fandom.com/wiki/File:Neutrois_Flag.svg" target="_blank"
                             rel="noopener noreferrer">LGBTQIA+ Wiki</a>)
                     </td>
                     <td>3 stripes
