Changed/updated some of the color descriptions

--- a/pride.html
+++ b/pride.html
@@ -396,7 +396,7 @@
                     </td>
                     <td>3 stripes
                         <ul>
-                            <li>purple</li>
+                            <li>light-purple</li>
                             <li>white</li>
                             <li>light-green</li>
                         </ul>
@@ -431,7 +431,7 @@
                     </td>
                     <td>5 stripes
                         <ul>
-                            <li>dark-pink</li>
+                            <li>pink</li>
                             <li>white</li>
                             <li>purple</li>
                             <li>black</li>
@@ -471,7 +471,7 @@
                             <li>pink</li>
                             <li>yellow</li>
                             <li>white</li>
-                            <li>purple</li>
+                            <li>light-purple</li>
                             <li>blue</li>
                         </ul>
                     </td>
@@ -910,7 +910,7 @@
                     </td>
                     <td>3 stripes
                         <ul>
-                            <li>dark-pink</li>
+                            <li>pink</li>
                             <li>yellow</li>
                             <li>light-blue</li>
                         </ul>
@@ -1181,7 +1181,7 @@
                             <li>purple</li>
                             <li>white</li>
                             <li>blue</li>
-                            <li>dark-pink</li>
+                            <li>pink</li>
                         </ul>
                     </td>
                     <td><img src="img/4b-multis-neck.jpg"
@@ -1339,7 +1339,7 @@
                         <ul>
                             <li>light-blue</li>
                             <li>brown</li>
-                            <li>purple</li>
+                            <li>light-purple</li>
                         </ul>
                     </td>
                     <td><img src="img/4b-andro-neck.jpg"
@@ -1369,7 +1369,7 @@
         <nav>
             <ul>
                 <li>&nbsp;</li>
-                <li>Last updated 24 June 2025.</li>
+                <li>Last updated 28 July 2025.</li>
             </ul>
         </nav>
     </footer>
